--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,23 +1,129 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<body>
-<div class="container">
-    <h1>Post Thumbnail</h1>
-
-    <div class="container">
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-        </div>
-    </div>
-</div>
-</body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+	<head>
+		<meta charset="UTF-8" />
+		<title>Home</title>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+			crossorigin="anonymous" />
+	</head>
+	<body>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="#">Bulletin</a>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarNav"
+					aria-controls="navbarNav"
+					aria-expanded="false"
+					aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a
+								class="nav-link active"
+								aria-current="page"
+								th:href="@{/back}"
+								>Home</a
+							>
+						</li>
+						<li class="nav-item">
+							<a
+								class="nav-link"
+								th:href="@{/post/create}"
+								>Create Post</a
+							>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+		<div class="container">
+			<h1 class="text-center mt-3">Bulletin Board</h1>
+			<div class="d-flex justify-content-center mb-3">
+				<form
+					th:action="@{/post/search}"
+					th:object="${search}"
+					method="post"
+					class="input-group w-50">
+					<input
+						type="text"
+						class="form-control"
+						placeholder="Search Bulletin"
+						aria-label="Search Bulletin"
+						aria-describedby="button-search"
+						th:field="*{search}" />
+					<button
+						class="btn btn-outline-primary"
+						type="submit"
+						id="button-search">
+						Search
+					</button>
+				</form>
+			</div>
+			<div class="container mt-4">
+				<div class="d-flex flex-row flex-wrap gap-3">
+					<div
+						class="card"
+						style="width: 18rem"
+						th:each="post : ${posts}">
+						<div class="card-body">
+							<a
+								class="card-title fs-5 fw-bold text-decoration-none"
+								th:text="${post.title}"
+								th:href="@{/post/{id}(id=${post.id})}">
+								Title
+							</a>
+							<p
+								class="card-text"
+								th:text="${post.author}">
+								<small
+									class="text-body-secondary"
+									>Author</small
+								>
+							</p>
+							<div>
+								<p
+									class="card-text"
+									th:text="${post.content}">
+									Content
+								</p>
+							</div>
+							<div
+								class="d-flex justify-content-between">
+								<p
+									class="card-text fw-light text-body-secondary"
+									th:text="${#dates.format(post.createdAt, 'yyyy-MM-dd')}">
+									<small class=""
+										>Date</small
+									>
+								</p>
+								<p
+									class="card-text text-body-secondary fw-light">
+									<span
+										>Viewed:
+										<small
+											class=""
+											th:text="${post.views}"
+											>Views</small
+										></span
+									>
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+			crossorigin="anonymous"></script>
+	</body>
 </html>
