--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -91,7 +91,7 @@
 							<div>
 								<p
 									class="card-text"
-									th:text="${post.content}">
+									th:utext="${post.content}">
 									Content
 								</p>
 							</div>
