--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -86,7 +86,7 @@
 			</div>
 			<!-- Content Section -->
 			<div class="mb-3">
-				<p th:text="${post.content}">
+				<p th:utext="${post.content}">
 					Nulla interdum, dolor eget cursus varius, erat
 					erat euismod sapien, non congue arcu ligula et
 					nisl. In leo urna, volutpat quis tincidunt non,
